# CORTEX

./: .env.example  .gitignore  README.md  pyproject.toml  remove_emojis.py  start.py  vllm_inference.py
cua_agents/v1/: cli_app.py  test_all_tools.py
cua_agents/v1/agents/: code_agent.py  cortex.py  evocua_agent.py  grounding.py  infra_agent.py  mcp_agent.py  prompts.py  worker.py
cua_agents/v1/core/: engine.py  mllm.py  module.py
cua_agents/v1/memory/: procedural_memory.py
cua_agents/v1/tools/: tool_manager.py
cua_agents/v1/utils/: azure_audio.py  common_utils.py  formatters.py  lmm_utils.py
gui/: .gitignore  main.js  package-lock.json  package.json  preload.js  tsconfig.json
gui/renderer/: app.ts  index.html  style.css
server/: ws_server.py
